force-app/main/default/objects/AcctPlanWallet__c/AcctPlanWallet__c.object-meta.xml
<CustomObject>
    <label>Account Plan Wallet</label>
    <nameField>
        <displayFormat>Wallet-{000000}</displayFormat>
        <label>Account Plan Wallet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Wallet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>