force-app/main/default/objects/AcctPlanWallet__c/fields/AcctPlanCompanyProfile__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanCompanyProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Plan Company Profile of Wallet</description>
    <label>Account Plan Company Profile</label>
    <referenceTo>AcctPlanCompanyProfile__c</referenceTo>
    <relationshipLabel>Account Plan Wallet</relationshipLabel>
    <relationshipName>Account_Plan_Wallet</relationshipName>
    <type>Lookup</type>
</CustomField>