force-app/main/default/objects/AcctPlanWallet__c/fields/AmtOfCreditFaciWithTMB__c.field-meta.xml
<CustomField>
    <fullName>AmtOfCreditFaciWithTMB__c</fullName>
    <description>Amount of credit facility with TMB</description>
    <inlineHelpText>Amount of credit facility with TMB</inlineHelpText>
    <label>AmtOfCreditFaciWithTMB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>