force-app/main/default/objects/AcctPlanWallet__c/fields/AS_Fee__c.field-meta.xml
<CustomField>
    <fullName>AS_Fee__c</fullName>
    <description>AS Fee (%)</description>
    <inlineHelpText>AS Fee (%)</inlineHelpText>
    <label>AS Fee (%)</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>