force-app/main/default/objects/AcctPlanWallet__c/fields/AS_Fee_AUM__c.field-meta.xml
<CustomField>
    <fullName>AS_Fee_AUM__c</fullName>
    <description>AS Fee AUM (Asset Under Management )</description>
    <formula>Asset_Under_Management__c *AS_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>AS Fee AUM (Asset Under Management )</inlineHelpText>
    <label>AS Fee AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>