force-app/main/default/objects/AcctPlanWallet__c/fields/Asset_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>Asset_Under_Management__c</fullName>
    <description>AUM (Asset Under Management)</description>
    <inlineHelpText>AUM (Asset Under Management)</inlineHelpText>
    <label>AUM (Asset Under Management)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>