force-app/main/default/objects/AcctPlanWallet__c/fields/AvgOperatingDepBalance__c.field-meta.xml
<CustomField>
    <fullName>AvgOperatingDepBalance__c</fullName>
    <description>Average operating deposit balance (Unit : Baht)</description>
    <formula>(  EstimatedSalesAmtPerYear__c  *  CashCycle__c  )  / 365</formula>
    <inlineHelpText>Average operating deposit balance (Unit : Baht)</inlineHelpText>
    <label>AvgOperatingDepBalance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>