force-app/main/default/objects/AcctPlanWallet__c/fields/BA_Premium__c.field-meta.xml
<CustomField>
    <fullName>BA_Premium__c</fullName>
    <description>BA Premium</description>
    <inlineHelpText>BA Premium</inlineHelpText>
    <label>BA Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>