force-app/main/default/objects/AcctPlanWallet__c/fields/BusinessHasSeasonal__c.field-meta.xml
<CustomField>
    <fullName>BusinessHasSeasonal__c</fullName>
    <description>ต้องการทราบว่า business ของลูกค้านั้นเกี่ยวข้องกับเรื่องของฤดูกาลหรือไม่</description>
    <inlineHelpText>ต้องการทราบว่า business ของลูกค้านั้นเกี่ยวข้องกับเรื่องของฤดูกาลหรือไม่</inlineHelpText>
    <label>BusinessHasSeasonal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>