force-app/main/default/objects/AcctPlanWallet__c/fields/CashCycle__c.field-meta.xml
<CustomField>
    <fullName>CashCycle__c</fullName>
    <description>Cash cycle (calculated by different  between collection and payment period) and RM will consider the cash clycle by themselves. Each company has different cash cycle.
เป็นการกะประมาณกระแสเงินรับเข้าจากทางด้าน collection ว่ามีการเก็บเงินจากการรับเข้าเมื่อไหร่ และจ่ายออกไปเมื่อไหร่ ซึ่งจะทำให้ทราบว่าโดยเฉลี่ยเก็บไว้กี่วัน</description>
    <inlineHelpText>Cash cycle (calculated by different  between collection and payment period) and RM will consider the cash clycle by themselves. Each company has different cash cycle.</inlineHelpText>
    <label>Cash Cycle</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>