force-app/main/default/objects/AcctPlanWallet__c/fields/CashOnHand__c.field-meta.xml
<CustomField>
    <fullName>CashOnHand__c</fullName>
    <description>เงินสดในมือ และ/หรือ เงินฝากในบัญชีธนาคาร รวมทุกธนาคารของลูกค้า</description>
    <inlineHelpText>เงินสดในมือ และ/หรือ เงินฝากในบัญชีธนาคาร รวมทุกธนาคารของลูกค้า</inlineHelpText>
    <label>Cash on hand and/ or Cash at Bank</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>