force-app/main/default/objects/AcctPlanWallet__c/fields/CashOnHand_Nimd__c.field-meta.xml
<CustomField>
    <fullName>CashOnHand_Nimd__c</fullName>
    <description>Cash On Hand NIMd</description>
    <inlineHelpText>Cash On Hand NIMd</inlineHelpText>
    <label>CashOnHand Nimd</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>