force-app/main/default/objects/AcctPlanWallet__c/fields/COGSAmount__c.field-meta.xml
<CustomField>
    <fullName>COGSAmount__c</fullName>
    <description>COGS (Amount :Baht)</description>
    <formula>EstimatedSalesAmtPerYear__c  *  COGSPercent__c</formula>
    <inlineHelpText>COGS (Amount :Baht)</inlineHelpText>
    <label>COGSAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>