force-app/main/default/objects/AcctPlanWallet__c/fields/COGSPercent__c.field-meta.xml
<CustomField>
    <fullName>COGSPercent__c</fullName>
    <description>% COGS (From estimated sales)</description>
    <inlineHelpText>% COGS (From estimated sales)</inlineHelpText>
    <label>% COGS (From estimated sales)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>