force-app/main/default/objects/AcctPlanWallet__c/fields/CollectionExportFeeCharge__c.field-meta.xml
<CustomField>
    <fullName>CollectionExportFeeCharge__c</fullName>
    <label>CollectionExportFeeCharge</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>