force-app/main/default/objects/AcctPlanWallet__c/fields/CollectionExportStandardFee__c.field-meta.xml
<CustomField>
    <fullName>CollectionExportStandardFee__c</fullName>
    <label>CollectionExportStandardFee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>