force-app/main/default/objects/AcctPlanWallet__c/fields/DataAsOfDeposit__c.field-meta.xml
<CustomField>
    <fullName>DataAsOfDeposit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DataAsOfDeposit</label>
    <type>DateTime</type>
</CustomField>