force-app/main/default/objects/AcctPlanWallet__c/fields/DataAsOfMonthFacilityInternational__c.field-meta.xml
<CustomField>
    <fullName>DataAsOfMonthFacilityInternational__c</fullName>
    <description>Data as of (Month)</description>
    <inlineHelpText>Data as of (Month)</inlineHelpText>
    <label>DataAsOfMonthFacilityInternational</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>