force-app/main/default/objects/AcctPlanWallet__c/fields/DataAsOfYearFacilityInternational__c.field-meta.xml
<CustomField>
    <fullName>DataAsOfYearFacilityInternational__c</fullName>
    <description>Data as of (Year)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data as of (Year)</inlineHelpText>
    <label>DataAsOfYearFacilityInternational</label>
    <length>4</length>
    <type>Text</type>
</CustomField>