force-app/main/default/objects/AcctPlanWallet__c/fields/EstimatedSalesAmtPerYear__c.field-meta.xml
<CustomField>
    <fullName>EstimatedSalesAmtPerYear__c</fullName>
    <description>คาดการณ์ยอดขายต่อปี ซึ่งเป็นยอดขายของปีที่ทำ account plan</description>
    <inlineHelpText>คาดการณ์ยอดขายต่อปี ซึ่งเป็นยอดขายของปีที่ทำ account plan</inlineHelpText>
    <label>Estimated Sales (Year of account plan)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>