force-app/main/default/objects/AcctPlanWallet__c/fields/EstimatedSalesPercent__c.field-meta.xml
<CustomField>
    <fullName>EstimatedSalesPercent__c</fullName>
    <description>Estimated Sales Percent - Total % of Sales (always 100%)</description>
    <formula>TotalDomesticPercent__c  +  TotalExportPercent__c</formula>
    <inlineHelpText>Estimated Sales Percent - Total % of Sales (always 100%)</inlineHelpText>
    <label>EstimatedSalesPercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>