force-app/main/default/objects/AcctPlanWallet__c/fields/ExistingAmountLGTax__c.field-meta.xml
<CustomField>
    <fullName>ExistingAmountLGTax__c</fullName>
    <description>Existing Amount or Expected amount  (Unit : Baht) - 1.4 L/G Tax</description>
    <inlineHelpText>Existing Amount or Expected amount  (Unit : Baht) - 1.4 L/G Tax</inlineHelpText>
    <label>ExistingAmountLGTax</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>