force-app/main/default/objects/AcctPlanWallet__c/fields/ExistingAmountLGUtilities__c.field-meta.xml
<CustomField>
    <fullName>ExistingAmountLGUtilities__c</fullName>
    <description>Existing Amount or Expected amount  (Unit : Baht) - 1.3 L/G Utilities</description>
    <inlineHelpText>Existing Amount or Expected amount  (Unit : Baht) - 1.3 L/G Utilities</inlineHelpText>
    <label>ExistingAmountLGUtilities</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>