force-app/main/default/objects/AcctPlanWallet__c/fields/FI_Customer_FX__c.field-meta.xml
<CustomField>
    <fullName>FI_Customer_FX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FI Customer FX</label>
    <type>Checkbox</type>
</CustomField>