force-app/main/default/objects/AcctPlanWallet__c/fields/FICustomerFlag__c.field-meta.xml
<CustomField>
    <fullName>FICustomerFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FI Customer</description>
    <inlineHelpText>FI Customer</inlineHelpText>
    <label>FICustomerFlag</label>
    <type>Checkbox</type>
</CustomField>