force-app/main/default/objects/AcctPlanWallet__c/fields/FX_Volume_per_Year_THB__c.field-meta.xml
<CustomField>
    <fullName>FX_Volume_per_Year_THB__c</fullName>
    <label>FX Volume per Year (THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>