force-app/main/default/objects/AcctPlanWallet__c/fields/HighSeasonEndMonth__c.field-meta.xml
<CustomField>
    <fullName>HighSeasonEndMonth__c</fullName>
    <description>The end month of the high season</description>
    <inlineHelpText>The end month of the high season</inlineHelpText>
    <label>HighSeasonEndMonth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>