force-app/main/default/objects/AcctPlanWallet__c/fields/InvestmentAmount__c.field-meta.xml
<CustomField>
    <fullName>InvestmentAmount__c</fullName>
    <description>Investment ในส่วนอื่นๆ ซึ่งไม่ใช่การเก็บเงินไว้ที่ธนาคาร หรือ hold เงินสดไว้ g=jo นำเงินไปลงทุนใน BE เป็นต้น</description>
    <inlineHelpText>Investment ในส่วนอื่นๆ ซึ่งไม่ใช่การเก็บเงินไว้ที่ธนาคาร หรือ hold เงินสดไว้ เช่น นำเงินไปลงทุนใน BE เป็นต้น</inlineHelpText>
    <label>Investment amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>