force-app/main/default/objects/AcctPlanWallet__c/fields/InvestmentAmount_NIMd__c.field-meta.xml
<CustomField>
    <fullName>InvestmentAmount_NIMd__c</fullName>
    <description>Investment Amount	NIMd</description>
    <inlineHelpText>Investment Amount	NIMd</inlineHelpText>
    <label>Investment amount (NIMd%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>