force-app/main/default/objects/AcctPlanWallet__c/fields/LGPurchaseAmountPerMonth__c.field-meta.xml
<CustomField>
    <fullName>LGPurchaseAmountPerMonth__c</fullName>
    <description>Purchase amount per month (Unit : Baht)</description>
    <inlineHelpText>Purchase amount per month (Unit : Baht)</inlineHelpText>
    <label>LGPurchaseAmountPerMonth</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>