force-app/main/default/objects/AcctPlanWallet__c/fields/LGPurchaseCreditTerm__c.field-meta.xml
<CustomField>
    <fullName>LGPurchaseCreditTerm__c</fullName>
    <description>Credit term (days)</description>
    <inlineHelpText>Credit term (days)</inlineHelpText>
    <label>LGPurchaseCreditTerm</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>