force-app/main/default/objects/AcctPlanWallet__c/fields/LGPurchaseLGFee__c.field-meta.xml
<CustomField>
    <fullName>LGPurchaseLGFee__c</fullName>
    <description>L/G Rate (%) (Note: formerly L/G Fee)</description>
    <inlineHelpText>L/G Rate (%) (Note: formerly L/G Fee)</inlineHelpText>
    <label>LGPurchaseLGFee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>