force-app/main/default/objects/AcctPlanWallet__c/fields/LGPurchaseRequiredLGAmount__c.field-meta.xml
<CustomField>
    <fullName>LGPurchaseRequiredLGAmount__c</fullName>
    <description>Required LG amount (Unit : Baht)</description>
    <formula>LGPurchaseAmountPerMonth__c/30 * LGPurchaseCreditTerm__c *  LGPurchaseRequiredLGPortion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Required LG amount (Unit : Baht)</inlineHelpText>
    <label>LGPurchaseRequiredLGAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>