force-app/main/default/objects/AcctPlanWallet__c/fields/LGPurchaseRequiredLGPortion__c.field-meta.xml
<CustomField>
    <fullName>LGPurchaseRequiredLGPortion__c</fullName>
    <description>Required L/G portion (%)</description>
    <inlineHelpText>Required L/G portion (%)</inlineHelpText>
    <label>LGPurchaseRequiredLGPortion</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>