force-app/main/default/objects/AcctPlanWallet__c/fields/LGPurchaseTotalWalletLGFee__c.field-meta.xml
<CustomField>
    <fullName>LGPurchaseTotalWalletLGFee__c</fullName>
    <description>Wallet LG (Purchase) fee (Unit : Baht)</description>
    <formula>LGPurchaseRequiredLGAmount__c *  LGPurchaseLGFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wallet LG (Purchase) fee (Unit : Baht)</inlineHelpText>
    <label>LGPurchaseTotalWalletLGFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>