force-app/main/default/objects/AcctPlanWallet__c/fields/LongTermWalletLGFee__c.field-meta.xml
<CustomField>
    <fullName>LongTermWalletLGFee__c</fullName>
    <description>Wallet LG Project  fee - Long Term Project</description>
    <inlineHelpText>Wallet LG Project  fee - Long Term Project</inlineHelpText>
    <label>LongTermWalletLGFee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>