force-app/main/default/objects/AcctPlanWallet__c/fields/MaxCreditFeeWorkingCapital__c.field-meta.xml
<CustomField>
    <fullName>MaxCreditFeeWorkingCapital__c</fullName>
    <description>Total credit fee (Yearly) - calculated from Max value between Credit Fee - Normal Period and Credit Fee - High Period</description>
    <inlineHelpText>Total credit fee (Yearly) - calculated from Max value between Credit Fee - Normal Period and Credit Fee - High Period</inlineHelpText>
    <label>MaxCreditFeeWorkingCapital</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>