force-app/main/default/objects/AcctPlanWallet__c/fields/NimdPercent_CashOnHand__c.field-meta.xml
<CustomField>
    <fullName>NimdPercent_CashOnHand__c</fullName>
    <description>NIMd (%)</description>
    <inlineHelpText>NIMd (%)</inlineHelpText>
    <label>Cash on hand and/ or Cash at Bank(NIMd%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>