force-app/main/default/objects/AcctPlanWallet__c/fields/NimdPercent_OperatingTransaction__c.field-meta.xml
<CustomField>
    <fullName>NimdPercent_OperatingTransaction__c</fullName>
    <description>NIMd (%)</description>
    <inlineHelpText>NIMd (%)</inlineHelpText>
    <label>NIMd (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>