force-app/main/default/objects/AcctPlanWallet__c/fields/OperatingExpAmount__c.field-meta.xml
<CustomField>
    <fullName>OperatingExpAmount__c</fullName>
    <description>ค่าใช้จ่ายที่เป็น operating expense อาจจะ check จากงบ หรือใช้วิธีการในการสอบถามลูกค้าก็ได้</description>
    <inlineHelpText>ค่าใช้จ่ายที่เป็น operating expense อาจจะ check จากงบ หรือใช้วิธีการในการสอบถามลูกค้าก็ได้</inlineHelpText>
    <label>Operating Expense (Amount : THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>