force-app/main/default/objects/AcctPlanWallet__c/fields/ProtectionPercent__c.field-meta.xml
<CustomField>
    <fullName>ProtectionPercent__c</fullName>
    <description>% of protection</description>
    <inlineHelpText>% of protection</inlineHelpText>
    <label>ProtectionPercent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>