force-app/main/default/objects/AcctPlanWallet__c/fields/RequestLGFromBuyerLGPercent__c.field-meta.xml
<CustomField>
    <fullName>RequestLGFromBuyerLGPercent__c</fullName>
    <description>% of required LG</description>
    <inlineHelpText>% of required LG</inlineHelpText>
    <label>RequestLGFromBuyerLGPercent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>