force-app/main/default/objects/AcctPlanWallet__c/fields/RequestLGFromBuyerOrderPerBuyer__c.field-meta.xml
<CustomField>
    <fullName>RequestLGFromBuyerOrderPerBuyer__c</fullName>
    <description>Order per buyer (per year)</description>
    <inlineHelpText>Order per buyer (per year)</inlineHelpText>
    <label>RequestLGFromBuyerOrderPerBuyer</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>