force-app/main/default/objects/AcctPlanWallet__c/fields/RequestLGFromBuyerWhoPayLGFee__c.field-meta.xml
<CustomField>
    <fullName>RequestLGFromBuyerWhoPayLGFee__c</fullName>
    <description>Who pay for LG fee?</description>
    <inlineHelpText>Who pay for LG fee?</inlineHelpText>
    <label>RequestLGFromBuyerWhoPayLGFee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core Buyers</fullName>
            </value>
            <value>
                <fullName>Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>