force-app/main/default/objects/AcctPlanWallet__c/fields/RequiredProtectionAmt__c.field-meta.xml
<CustomField>
    <fullName>RequiredProtectionAmt__c</fullName>
    <description>Required protection amount</description>
    <formula>(AmtOfCreditFaciWithTMB__c * ProtectionPercent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Required protection amount</inlineHelpText>
    <label>RequiredProtectionAmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>