force-app/main/default/objects/AcctPlanWallet__c/fields/ShortTermWalletLGFee__c.field-meta.xml
<CustomField>
    <fullName>ShortTermWalletLGFee__c</fullName>
    <description>Wallet LG Project fee - Short Term Project</description>
    <inlineHelpText>Wallet LG Project fee - Short Term Project</inlineHelpText>
    <label>ShortTermWalletLGFee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>