force-app/main/default/objects/AcctPlanWallet__c/fields/Spread__c.field-meta.xml
<CustomField>
    <fullName>Spread__c</fullName>
    <label>Spread (%)</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>