force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfAcctPlanForeignWalletFXFeePerYear__c.field-meta.xml
<CustomField>
    <fullName>SumOfAcctPlanForeignWalletFXFeePerYear__c</fullName>
    <description>Total Wallet FX fee (Yearly)</description>
    <inlineHelpText>Total Wallet FX fee (Yearly)</inlineHelpText>
    <label>SumOfAcctPlanForeignWalletFXFeePerYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>