force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCapitalExpenditurePlanCreditFee__c.field-meta.xml
<CustomField>
    <fullName>SumOfCapitalExpenditurePlanCreditFee__c</fullName>
    <description>Total Credit Fee</description>
    <inlineHelpText>Total Credit Fee</inlineHelpText>
    <label>SumOfCapitalExpenditurePlanCreditFee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>