force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCapitalExpenditurePlanNIIC__c.field-meta.xml
<CustomField>
    <fullName>SumOfCapitalExpenditurePlanNIIC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total NIIc</description>
    <inlineHelpText>Total NIIc</inlineHelpText>
    <label>SumOfCapitalExpenditurePlanNIIC</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>