force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCollectionCurrencyAmtPerYear__c.field-meta.xml
<CustomField>
    <fullName>SumOfCollectionCurrencyAmtPerYear__c</fullName>
    <description>Total of Collection Currency Amount per year</description>
    <inlineHelpText>Total of Collection Currency Amount per year</inlineHelpText>
    <label>SumOfCollectionCurrencyAmtPerYear</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>