force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCollectionCurrencyPortion__c.field-meta.xml
<CustomField>
    <fullName>SumOfCollectionCurrencyPortion__c</fullName>
    <description>Total of Collection Currency Portion</description>
    <inlineHelpText>Total of Collection Currency Portion</inlineHelpText>
    <label>SumOfCollectionCurrencyPortion</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>