force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCollectionDomesticVolumn__c.field-meta.xml
<CustomField>
    <fullName>SumOfCollectionDomesticVolumn__c</fullName>
    <description>จำนวนเงินจากการ collect เงินจากการขายทุกรูปแบบรวมกัน</description>
    <inlineHelpText>จำนวนเงินจากการ collect เงินจากการขายทุกรูปแบบรวมกัน</inlineHelpText>
    <label>Total Domestic (Vol.) (Avg per Month)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>