force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCollectionExportFeeCharge__c.field-meta.xml
<CustomField>
    <fullName>SumOfCollectionExportFeeCharge__c</fullName>
    <description>Total of column Fee charge (adjusted by RM)</description>
    <inlineHelpText>Total of column Fee charge (adjusted by RM)</inlineHelpText>
    <label>SumOfCollectionExportFeeCharge</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>