force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCollectionExportStandardFee__c.field-meta.xml
<CustomField>
    <fullName>SumOfCollectionExportStandardFee__c</fullName>
    <description>Total of column Standard Fee (Reference)</description>
    <inlineHelpText>Total of column Standard Fee (Reference)</inlineHelpText>
    <label>SumOfCollectionExportStandardFee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>