force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCollectionExportVolPercent__c.field-meta.xml
<CustomField>
    <fullName>SumOfCollectionExportVolPercent__c</fullName>
    <description>Total of column % Vol.</description>
    <inlineHelpText>Total of column % Vol.</inlineHelpText>
    <label>Total % Vol</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>