force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCollectionExportWalletTradeFee__c.field-meta.xml
<CustomField>
    <fullName>SumOfCollectionExportWalletTradeFee__c</fullName>
    <description>Total of column Wallet Trade fee (Yearly)</description>
    <inlineHelpText>Total of column Wallet Trade fee (Yearly)</inlineHelpText>
    <label>Total Wallet Trade fee (Yearly)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>