force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCollectionVolumnPercent__c.field-meta.xml
<CustomField>
    <fullName>SumOfCollectionVolumnPercent__c</fullName>
    <description>สัดส่วนของการรับเงินซึ่งในช่องนี้ต้องไม่มากกว่า 100%</description>
    <inlineHelpText>สัดส่วนของการรับเงินซึ่งในช่องนี้ต้องไม่มากกว่า 100%</inlineHelpText>
    <label>Total % Vol</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>