force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCollectionWalletCashFee__c.field-meta.xml
<CustomField>
    <fullName>SumOfCollectionWalletCashFee__c</fullName>
    <description>Total of column Wallet cash fee (Yearly)</description>
    <inlineHelpText>Total of column Wallet cash fee (Yearly)</inlineHelpText>
    <label>Total Wallet Cash Fee (Yearly)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>