force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCreditFacilityLimit__c.field-meta.xml
<CustomField>
    <fullName>SumOfCreditFacilityLimit__c</fullName>
    <description>Total (Limit Amount)</description>
    <inlineHelpText>Total (Limit Amount)</inlineHelpText>
    <label>SumOfCreditFacilityLimit</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>