force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCreditFacilityLimitInter__c.field-meta.xml
<CustomField>
    <fullName>SumOfCreditFacilityLimitInter__c</fullName>
    <description>Total (Limit Amount)</description>
    <inlineHelpText>Total (Limit Amount)</inlineHelpText>
    <label>SumOfCreditFacilityLimitInter</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>