force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfCreditFacilityOutstandingInter__c.field-meta.xml
<CustomField>
    <fullName>SumOfCreditFacilityOutstandingInter__c</fullName>
    <description>Total (Outstanding)</description>
    <inlineHelpText>Total (Outstanding)</inlineHelpText>
    <label>SumOfCreditFacilityOutstandingInter</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>