force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfDepositInternationalAmtPerMonth__c.field-meta.xml
<CustomField>
    <fullName>SumOfDepositInternationalAmtPerMonth__c</fullName>
    <label>SumOfDepositInternationalAmtPerMonth</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>