force-app/main/default/objects/AcctPlanWallet__c/fields/SumOfExistingLongTermLoan__c.field-meta.xml
<CustomField>
    <fullName>SumOfExistingLongTermLoan__c</fullName>
    <description>Total Amount (Baht/Equivalent Baht)</description>
    <inlineHelpText>Total Amount (Baht/Equivalent Baht)</inlineHelpText>
    <label>SumOfExistingLongTermLoan</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>