force-app/main/default/objects/AcctPlanWallet__c/fields/SumofExistingLongTermLoanNIIC__c.field-meta.xml
<CustomField>
    <fullName>SumofExistingLongTermLoanNIIC__c</fullName>
    <description>Total Wallet NIIc (Yearly)</description>
    <inlineHelpText>Total Wallet NIIc (Yearly)</inlineHelpText>
    <label>SumofExistingLongTermLoanNIIC</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>